# tomgpt

./: .gitignore  README.md  app.py  assistant_config_manager.py  cmd_assistant.py  create_assistant.py  flaskapp.py  helper.py  prompts.py  pyproject.toml  requirements.txt
functions/: chatfunction.py  exceptionthrowing.py  executepython.py  getassistantthreads.py  readlocalfile.py  readurl.py  saveconversation.py  savetogithub.py  summarizeconversation.py  weather.py  writefile.py
output_files/: fart.txt  fibonacci.py  test_file.txt
saved_conversations/: conversation.json  conversation_log.json
static/: chat.css
templates/: chat.html
tomgpt/: assistant_config_manager.py  cmd_assistant.py  flaskapp.py  helper.py  prompts.py
tomgpt/brains/: openai_singleton.py
tomgpt/conversation/: conversation.py  friendship.py
tomgpt/functions/: change_assistant.py  chatfunction.py  commitandcreatepr.py  creategithubbranch.py  creategithubpr.py  exceptionthrowing.py  execute_bash_command_chat_function.py  execute_subprocess_chat_function.py  executepython.py  getassistantthreads.py  list_files_chat_function.py  mergegithubpr.py  readlocalfile.py  readurl.py  savecurrentthread.py  summarizeconversation.py  updatethreadid.py  weather.py  websearch.py  writefile.py
tomgpt/interfaces/: cmd_assistant.py  interface.py  voice_assistant.py
